# SPDX-License-Identifier: MPL-2.0
[package]
name = "halideiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Compile image/video processing pipelines to optimised Halide schedules — 10-100x faster than hand-tuned C"
license-file = "LICENSE"
repository = "https://github.com/hyperpolymath/halideiser"
keywords = ["halide", "image-processing", "video", "acceleration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
